--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <p id="p1"></p>
-    <p id="p2"></p>
-    <p id="p3"></p>
-
-
+    <h1 id="myH1">welcome</h1>
+    <label>UserName:</label>
+    <input type="text" id="myText">
+    <br/>
+    <br/>
+    <button id="myButton">Submit</button>
 
     <script src="./index.js"></script>
 </body>
