--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
+    <div id="input-container">
+        <p id="numPara">0</p>
+        <button id="increment-btn">Increment</button>
+        <button id="decrement-btn">Decrement</button>
+        <button id="reset-btn">Reset</button>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
