--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
-    <script src="./index.js"></script>
+    <button id="clickBtn">click me</button>
+    <button id="clickBtn2">click me to load another js</button>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
