--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
-
-    <h1 id="first">Hii</h1>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
+    <div id="container">
+      <button class="myButtons">Button1</button>
+      <button class="myButtons">Button2</button>
+      <button class="myButtons">Button3</button>
+      <button class="myButtons">Button4</button>
+      <button class="myButtons">Button5</button>
+    </div>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
